Fix lower class name and add color and spacing properties
Fixed a type in the class name container-mid-lower in css file. Added background and padding properties. Added a missing period in the quote text

--- a/style.css
+++ b/style.css
@@ -109,9 +109,11 @@ button {
     border-radius: 20px;
 }
 
-.container-mid-upper {
+.container-mid-lower {
     display: flex;
     flex-direction: column;
+    background: #e5e7eb;
+    padding: 100px 250px;
 }
 
 #quote {
